Fix file descriptor leak in p11_kit_pin_file_callback()

* Close the file descriptor used to read the the pin file

https://bugs.freedesktop.org/show_bug.cgi?id=58706